chore: setup baseline variable rewrites

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
+@import './dvariables';
+
 $button-text-transform: normal;
 $button-elevation: ('default': 0, 'hover': 0, 'active': 0) !default;
 $button-padding-ratio: 2.5;
