feat: bulma-like design

--- a/src/styles/dvariables.scss
+++ b/src/styles/dvariables.scss
@@ -1,8 +1,8 @@
-$body-font-family:  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$body-font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-root: 16px;
 $line-height-root: 1.5;
 $border-color-root: rgba(var(--v-border-color), var(--v-border-opacity));
-$border-radius-root: 4px;
+$border-radius-root: 8px;
 $border-style-root: solid;
 
 // Spacers
