--- a/src/styles/overwrite.sass
+++ b/src/styles/overwrite.sass
@@ -1,8 +1,8 @@
-.text
-  &-h1, &-h2, &-h3, &-h4, &-h5, &-h6
-    margin-bottom: .5rem
-    margin-top: 0
+//.text
+//  &-h1, &-h2, &-h3, &-h4, &-h5, &-h6
+//    margin-bottom: .5rem
+//    margin-top: 0
 
 .v-btn
   font-size: 1rem
-  padding: .375rem .75rem
+  padding: .5rem .5rem
