fix(v-card): make buttons the same width

--- a/src/styles/overwrite.sass
+++ b/src/styles/overwrite.sass
@@ -12,7 +12,7 @@
   border-top: 1px solid rgba(var(--v-border-color), var(--v-border-opacity))
 
   .v-btn
-    flex-grow: 1
+    flex: 1 0 0
     color: rgb(var(--v-theme-info))
 
   .v-btn:not(:last-child)
